--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,22 +13,19 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
-      - name: Setup Bun
-        uses: oven-sh/setup-bun@v1
+      - name: Setup Node
+        uses: actions/setup-node@v4
         with:
-          bun-version: latest
+          node-version: 20
 
       - name: Install dependencies
-        run: bun install --frozen-lockfile
+        run: npm ci
 
       - name: Type Check
-        run: bunx tsc --noEmit
+        run: npx tsc --noEmit
 
       - name: Lint
-        run: bun run lint
-
-      - name: Unit Tests
-        run: bun run test
+        run: npm run lint
 
       - name: Build Next.js
-        run: bun run build
+        run: npm run build
