--- a/package.json
+++ b/package.json
@@ -104,15 +104,21 @@
   "devDependencies": {
     "@eslint/eslintrc": "^0.1.0",
     "@tailwindcss/postcss": "^4",
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.2",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/react-syntax-highlighter": "^15.5.13",
     "@types/three": "^0.178.0",
+    "@vitejs/plugin-react": "^5.1.4",
     "eslint": "^10.0.1",
     "eslint-config-next": "^0.2.4",
+    "jsdom": "^28.1.0",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vitest": "^4.0.18"
   }
 }
