--- a/package.json
+++ b/package.json
@@ -102,7 +102,7 @@
     "zod": "^4.1.12"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^0.1.0",
+    "@eslint/eslintrc": "^3.3.3",
     "@tailwindcss/postcss": "^4",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
@@ -115,7 +115,10 @@
     "@vitejs/plugin-react": "^5.1.4",
     "eslint": "^10.0.1",
     "eslint-config-next": "^0.2.4",
+    "eslint-plugin-import": "^2.32.0",
+    "globals": "^17.3.0",
     "jsdom": "^28.1.0",
+    "lodash": "^4.17.23",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5",
