--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
     "estree-walker": "2.0.2",
+    "firebase": "^12.9.0",
     "framer-motion": "^12.23.24",
     "gsap": "^3.14.2",
     "input-otp": "^1.4.2",
